exo: Fix activatable state for transient children

Transient child should not be activatable unless it has an
application id. This allows aura shell clients to create
popup style windows without using the xdg popup API that
requires the ability to dismiss a surface.

Bug: 857465
Test: exo_unittest --gtest_filter=ShellSurface.SetParent
Change-Id: I628e51af113ab7e3cd73925b9af7e339ef1442cd
Reviewed-on: https://chromium-review.googlesource.com/1118855
Commit-Queue: David Reveman <reveman@chromium.org>
Reviewed-by: Daniele Castagna <dcastagna@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571232}
Former-commit-id: c6c1d3b505d915677594d663b9a968d503c2ed6d